--- a/no-password.html
+++ b/no-password.html
@@ -190,7 +190,7 @@
                </a>
             </div>
             <div name = "Slope" class="column gameDiv all">
-               <a class="blogLink" href="games/slope.html">
+               <a class="blogLink" href="games/slope/">
                   <div class="content">
                      <img src="https://i.ibb.co/vsG6F2X/slope.png" alt="Slope" style="width:100%">
                      <h4>Slope</h4>
@@ -233,7 +233,7 @@
                <a class="blogLink" href="sansFight.html">
                   <div class="content">
                      <img src="https://i.ibb.co/nb7vnmk/Sans-Fight.png" alt="Sans Fight" style="width:100%">
-                     <h4>Sans Fight</h4>
+                     <h4>NOT WORKING</h4>
                   </div>
                </a>
             </div>
@@ -241,7 +241,7 @@
                <a class="blogLink" href="catMario.html">
                   <div class="content">
                      <img src="https://i.ibb.co/gMQyPGL/catMario.png" alt="Cat Mario" style="width:100%">
-                     <h4>Cat Mario</h4>
+                     <h4>NOT WORKING</h4>
                   </div>
                </a>
             </div>
@@ -265,7 +265,7 @@
                <a class="blogLink" href="#">
                   <div class="content">
                      <img src="https://i.ibb.co/937P0y7/run3.png" alt="Run 3" style="width:100%">
-                     <h4>Run 3</h4>
+                     <h4>NOT WORKING</h4>
                   </div>
                </a>
             </div>
@@ -313,7 +313,7 @@
                <a class="blogLink" href="#">
                   <div class="content">
                      <img src="https://i.ibb.co/99mXDmX/Gun-Mayham.png" alt="Gun Mayhem 2" style="width:100%">
-                     <h4>Gun Mayhem 2</h4>
+                     <h4>NOT WORKING</h4>
                   </div>
                </a>
             </div>
@@ -337,7 +337,7 @@
                <a class="blogLink" href="infMarioBros.html">
                   <div class="content">
                      <img src="https://i.ibb.co/gMt91QJ/InfMario.png" alt="Infinite Mario Bros" style="width:100%">
-                     <h4>Infinite Mario Bros</h4>
+                     <h4>NOT WORKING</h4>
                   </div>
                </a>
             </div>
@@ -345,7 +345,7 @@
                <a class="blogLink" href="games/choppy-orc.html">
                   <div class="content">
                      <img src="https://i.ibb.co/FxcJ5Hs/Choppy-Orc.png" alt="Choppy Orc" style="width:100%">
-                     <h4>Choppy Orc</h4>
+                     <h4>NOT WORKING</h4>
                   </div>
                </a>
             </div>
@@ -353,7 +353,7 @@
                <a class="blogLink" href="games/greedy-mimic.html">
                   <div class="content">
                      <img src="https://i.ibb.co/2ymw0mN/greedy-Mimic.png" alt="Greedy Mimic" style="width:100%">
-                     <h4>Greedy Mimic</h4>
+                     <h4>NOT WORKING</h4>
                   </div>
                </a>
             </div>
@@ -361,7 +361,7 @@
                <a class="blogLink" href="games/hasty-shaman.html">
                   <div class="content">
                      <img src="https://i.ibb.co/PT12RL7/hasty-Shaman.png" alt="Hasty Shaman" style="width:100%">
-                     <h4>Hasty Shaman</h4>
+                     <h4>NOT WORKING</h4>
                   </div>
                </a>
             </div>
@@ -369,7 +369,7 @@
                <a class="blogLink" href="games/sleepy-knight.html">
                   <div class="content">
                      <img src="https://i.ibb.co/jHYMvRZ/Sleepy-Knight.png" alt="Sleepy Knight" style="width:100%">
-                     <h4>Sleepy Knight</h4>
+                     <h4>NOT WORKING</h4>
                   </div>
                </a>
             </div>
@@ -377,7 +377,7 @@
                <a class="blogLink" href="games/one-trick-mage.html">
                   <div class="content">
                      <img src="https://i.ibb.co/GJbztkn/one-Trick-Mage.png" alt="One Trick Mage" style="width:100%">
-                     <h4>One Trick Mage</h4>
+                     <h4>NOT WORKING</h4>
                   </div>
                </a>
             </div>
@@ -385,7 +385,7 @@
                <a class="blogLink" href="games/orcs-vs-elves.html">
                   <div class="content">
                      <img src="https://i.ibb.co/zFx7R19/orc-Vs-Elves.png" alt="Orcs Vs Elves" style="width:100%">
-                     <h4>Orcs Vs Elves</h4>
+                     <h4>NOT WORKING</h4>
                   </div>
                </a>
             </div>
@@ -393,7 +393,7 @@
                <a class="blogLink" href="games/sticky-sorcerer.html">
                   <div class="content">
                      <img src="https://i.ibb.co/5hM8QNt/sticky-Sorcerer.png" alt="One Trick Mage" style="width:100%">
-                     <h4>Sticky Sorcerer</h4>
+                     <h4>NOT WORKING</h4>
                   </div>
                </a>
             </div>
@@ -401,7 +401,7 @@
                <a class="blogLink" href="games/dozen-bear.html">
                   <div class="content">
                      <img src="https://i.ibb.co/pnZGyL7/Dozen-Bear.png" alt="Dozen Bear" style="width:100%">
-                     <h4>Dozen Bear</h4>
+                     <h4>NOT WORKING</h4>
                   </div>
                </a>
             </div>
@@ -409,7 +409,7 @@
                <a class="blogLink" href="bloons.html">
                   <div class="content">
                      <img src="https://i.ibb.co/McQ74YC/game-Icon-8.png" alt="Bloons" style="width:100%">
-                     <h4>Bloons</h4>
+                     <h4>NOT WORKING</h4>
                   </div>
                </a>
             </div>
@@ -418,7 +418,7 @@
                   ">
                   <div class="content">
                      <img src="https://i.ibb.co/z7jW1xj/game-Icon-9.png" alt="Bloons Tower Defense" style="width:100%">
-                     <h4>Bloons Tower Defense</h4>
+                     <h4>NOT WORKING</h4>
                   </div>
                </a>
             </div>
@@ -427,7 +427,7 @@
                   ">
                   <div class="content">
                      <img src="https://i.ibb.co/6J2dDFb/bloons-TD2.png" alt="Bloons Tower Defense 2" style="width:100%">
-                     <h4>Bloons Tower Defense 2</h4>
+                     <h4>NOT WORKING</h4>
                   </div>
                </a>
             </div>
@@ -435,7 +435,7 @@
                <a class="blogLink" href="/games/super-putin-bros.html">
                   <div class="content">
                      <img src="https://i.ibb.co/PGbXsgr/super-Putin-Bros.png" alt="Super Putin Bros" style="width:100%">
-                     <h4>Super Putin Bros</h4>
+                     <h4>NOT WORKING</h4>
                   </div>
                </a>
             </div>
@@ -443,7 +443,7 @@
                <a class="blogLink" href="/games/adv-wars-2.html">
                   <div class="content">
                      <img src="https://i.ibb.co/g4Mn58g/Advance-Wars2.png" alt="Advance Wars 2" style="width:100%">
-                     <h4>Advance Wars 2</h4>
+                     <h4>NOT WORKING</h4>
                   </div>
                </a>
             </div>
@@ -451,7 +451,7 @@
                <a class="blogLink" href="/games/mario-kart.html">
                   <div class="content">
                      <img src="https://i.ibb.co/J5QH5pX/mario-Kart.png" alt="Mario Kart" style="width:100%">
-                     <h4>Mario Kart</h4>
+                     <h4>NOT WORKING</h4>
                   </div>
                </a>
             </div>
@@ -459,7 +459,7 @@
                <a class="blogLink" href="/games/pokemon-FR.html">
                   <div class="content">
                      <img src="https://i.ibb.co/vQ09GWw/pokemon-Fired-Red.png" alt="Pokémon FireRed" style="width:100%">
-                     <h4>Pokémon FireRed</h4>
+                     <h4>NOT WORKING</h4>
                   </div>
                </a>
             </div>
@@ -467,7 +467,7 @@
                <a class="blogLink" href="/games/monopoly.html">
                   <div class="content">
                      <img src="https://i.ibb.co/ZBJgwHX/monoply.png" alt="Monopoly" style="width:100%">
-                     <h4>Monopoly</h4>
+                     <h4>NOT WORKING</h4>
                   </div>
                </a>
             </div>
@@ -475,7 +475,7 @@
                <a class="blogLink" href="/games/tetris-worlds.html">
                   <div class="content">
                      <img src="https://i.ibb.co/YpCtnvD/tetris-Worlds.png" alt="Tetris Worlds" style="width:100%">
-                     <h4>Tetris Worlds</h4>
+                     <h4>NOT WORKING</h4>
                   </div>
                </a>
             </div>
