--- a/no-password.html
+++ b/no-password.html
@@ -80,7 +80,7 @@
 	     <div name = "Cut The Rope" class="column gameDiv all">
                <a class="blogLink" href="games/ctr/">
                   <div class="content">
-                     <img src="https://i.ibb.co/Bjg1h29/cut-the-rope-holiday.png" alt="Cut The Rope" style="width:100%">
+                     <img src="https://i.ibb.co/0Y26LdQ/cut-the-rope.png" alt="Cut The Rope" style="width:100%">
                      <h4>Cut The Rope</h4>
                   </div>
                </a>
@@ -93,7 +93,7 @@
                   </div>
                </a>
             </div>
-            <div name = "Cut The Rope Time Travel" class=" ">
+            <div name = "Cut The Rope Time Travel" class="column gameDiv all">
                <a class="blogLink" href="games/ctr-tr/">
                   <div class="content">
                      <img src="https://i.ibb.co/5kCZYdP/cut-the-rope-tr.png" alt="Cut The Rope Time Travel" style="width:100%">
