--- a/no-password.html
+++ b/no-password.html
@@ -77,7 +77,23 @@
       <div class="main">
          <!-- Portfolio Gallery Grid -->
          <div class="row">
-	     <div name = "Cut The Rope" class="column gameDiv all">
+            <div name = "Rooftop Snipers" class="column gameDiv all 2">
+               <a class="blogLink" href="games/rooftop-snipers/">
+                  <div class="content">
+                     <img src="img/rooftopSnipers.png" alt="Rooftop Snipers" style="width:100%">
+                     <h4>Rooftop Snipers</h4>
+                  </div>
+               </a>
+            </div>
+            <div name = "fireboy watergirl in the forest temple" class="column gameDiv all">
+               <a class="blogLink" href="games/fireboy-watergirl-in-the-forest-temple/">
+                  <div class="content">
+                     <img src="img/fireboy_and_watergirl_TFT.png" alt="fireboy watergirl in the forest temple" style="width:100%">
+                     <h4>Fireboy & Watergirl</h4>
+                  </div>
+               </a>
+            </div>
+	         <div name = "Cut The Rope" class="column gameDiv all">
                <a class="blogLink" href="games/ctr/">
                   <div class="content">
                      <img src="https://i.ibb.co/0Y26LdQ/cut-the-rope.png" alt="Cut The Rope" style="width:100%">
@@ -104,7 +120,7 @@
             <div name = "Minecraft" class="column gameDiv all">
                <a class="blogLink" href="https://eaglercraft-replit.christianburek.repl.co/">
                   <div class="content">
-                     <img src="https://i.ibb.co/dcxjgT0/Minecraft.png" alt="Minecraft" style="width:100%">
+                     <img src="img/Minecraft.png" alt="Minecraft" style="width:100%">
                      <h4>Minecraft</h4>
                   </div>
                </a>
@@ -112,7 +128,7 @@
             <div name = "Temple Run 2" class="column gameDiv all">
                <a class="blogLink" href="games/temple-run-2/">
                   <div class="content">
-                     <img src="https://i.ibb.co/V9s9Pw0/temple-run-2.png" alt="Temple Run 2" style="width:100%">
+                     <img src="img/temple-run-2.png" alt="Temple Run 2" style="width:100%">
                      <h4>Temple Run 2</h4>
                   </div>
                </a>
@@ -120,7 +136,7 @@
             <div name = "Bit Life" class="column gameDiv all">
                <a class="blogLink" href="games/bitlife/">
                   <div class="content">
-                     <img src="https://i.ibb.co/bQkQhDS/bitlife.png" alt="Bit Life" style="width:100%">
+                     <img src="img/bitlife.png" alt="Bit Life" style="width:100%">
                      <h4>Bit Life</h4>
                   </div>
                </a>
@@ -128,7 +144,7 @@
             <div name = "There Is No Game" class="column gameDiv all">
                <a class="blogLink" href="games/there-is-no-game/">
                   <div class="content">
-                     <img src="https://i.ibb.co/chvbJ8t/there-is-no-game.jpg" alt="There Is No Game" style="width:100%">
+                     <img src="img/there is no game.jpg" alt="There Is No Game" style="width:100%">
                      <h4>There Is No Game</h4>
                   </div>
                </a>
@@ -136,7 +152,7 @@
             <div name = "Cookie Clicker" class="column gameDiv all">
                <a class="blogLink" href="games/cookie-clicker/">
                   <div class="content">
-                     <img src="https://i.ibb.co/f8yLBGQ/cookie-clicker.png" alt="Cookie Clicker" style="width:100%">
+                     <img src="img/cookie-clicker.png" alt="Cookie Clicker" style="width:100%">
                      <h4>Cookie Clicker</h4>
                   </div>
                </a>
@@ -144,7 +160,7 @@
             <div name = "Google Snake" class="column gameDiv all">
                <a class="blogLink" href="games/google-snake/">
                   <div class="content">
-                     <img src="https://i.ibb.co/SP3nZTL/snake.png" alt="snake" style="width:100%">
+                     <img src="img/snake.png" alt="snake" style="width:100%">
                      <h4>Google Snake</h4>
                   </div>
                </a>
@@ -152,7 +168,7 @@
             <div name = "1v1LOL" class="column gameDiv all">
                <a class="blogLink" href="games/1v1lol/">
                   <div class="content">
-                     <img src="https://i.ibb.co/k2rgYx0/1v1LOL.png" alt="1v1LOL" style="width:100%">
+                     <img src="img/1v1LOL.png" alt="1v1LOL" style="width:100%">
                      <h4>1v1LOL</h4>
                   </div>
                </a>
@@ -192,7 +208,7 @@
             <div name = "Slope" class="column gameDiv all">
                <a class="blogLink" href="games/slope/">
                   <div class="content">
-                     <img src="https://i.ibb.co/vsG6F2X/slope.png" alt="Slope" style="width:100%">
+                     <img src="img/slope.png" alt="Slope" style="width:100%">
                      <h4>Slope</h4>
                   </div>
                </a>
@@ -298,14 +314,6 @@
                   <div class="content">
                      <img src="https://i.ibb.co/n12280g/basketball-Legends.png" alt="Basketball Legends" style="width:100%">
                      <h4>Basketball Legends</h4>
-                  </div>
-               </a>
-            </div>
-            <div name = "Rooftop Snipers" class="column gameDiv all 2">
-               <a class="blogLink" href="games/rooftop-snipers/">
-                  <div class="content">
-                     <img src="https://i.ibb.co/GMN0Xqv/rooftop-Snipers.png" alt="Rooftop Snipers" style="width:100%">
-                     <h4>Rooftop Snipers</h4>
                   </div>
                </a>
             </div>
