--- a/no-password.html
+++ b/no-password.html
@@ -77,6 +77,38 @@
       <div class="main">
          <!-- Portfolio Gallery Grid -->
          <div class="row">
+            <div name = "Vex 3" class="column gameDiv all 2">
+               <a class="blogLink" href="games/vex3/">
+                  <div class="content">
+                     <img src="img/vex3.png" alt="Vex 3" style="width:100%">
+                     <h4>Vex 3</h4>
+                  </div>
+               </a>
+            </div>
+            <div name = "Vex 4" class="column gameDiv all">
+               <a class="blogLink" href="games/vex4/">
+                  <div class="content">
+                     <img src="img/vex4.png" alt="Vex 4" style="width:100%">
+                     <h4>Vex 4</h4>
+                  </div>
+               </a>
+            </div>
+	         <div name = "Vex 5" class="column gameDiv all">
+               <a class="blogLink" href="games/vex5/">
+                  <div class="content">
+                     <img src="img/vex5.png" alt="Vex 5" style="width:100%">
+                     <h4>Vex 5</h4>
+                  </div>
+               </a>
+            </div>
+            <div name = "Vex 6" class="column gameDiv all">
+               <a class="blogLink" href="games/vex6/">
+                  <div class="content">
+                     <img src="img/vex6.png" alt="Vex 6" style="width:100%">
+                     <h4>Vex 6</h4>
+                  </div>
+               </a>
+            </div>
             <div name = "Rooftop Snipers" class="column gameDiv all 2">
                <a class="blogLink" href="games/rooftop-snipers/">
                   <div class="content">
