--- a/no-password.html
+++ b/no-password.html
@@ -128,7 +128,7 @@
 	         <div name = "Cut The Rope" class="column gameDiv all">
                <a class="blogLink" href="games/ctr/">
                   <div class="content">
-                     <img src="https://i.ibb.co/0Y26LdQ/cut-the-rope.png" alt="Cut The Rope" style="width:100%">
+                     <img src="img/cut-the-rope.png" alt="Cut The Rope" style="width:100%">
                      <h4>Cut The Rope</h4>
                   </div>
                </a>
@@ -136,7 +136,7 @@
             <div name = "Cut The Rope Holiday Gift" class="column gameDiv all">
                <a class="blogLink" href="games/ctr-holiday/">
                   <div class="content">
-                     <img src="https://i.ibb.co/Bjg1h29/cut-the-rope-holiday.png" alt="Cut The Rope Holiday Gift" style="width:100%">
+                     <img src="img/cut-the-rope-holiday.png" alt="Cut The Rope Holiday Gift" style="width:100%">
                      <h4>Cut The Rope Holiday Gift</h4>
                   </div>
                </a>
@@ -144,7 +144,7 @@
             <div name = "Cut The Rope Time Travel" class="column gameDiv all">
                <a class="blogLink" href="games/ctr-tr/">
                   <div class="content">
-                     <img src="https://i.ibb.co/5kCZYdP/cut-the-rope-tr.png" alt="Cut The Rope Time Travel" style="width:100%">
+                     <img src="img/cut-the-rope-tr.png" alt="Cut The Rope Time Travel" style="width:100%">
                      <h4>Cut The Rope Time Travel</h4>
                   </div>
                </a>
