--- a/no-password.html
+++ b/no-password.html
@@ -17,7 +17,11 @@
       <a href="#"><li><i class="fa-solid fa-bug"></i> Report Bug</li></a>
       <a href="#"><li><i class="fa-solid fa-ghost"></i> Request Game</li></a>
       <a href="https://classroom.google.com/h"><li><i class="fa-solid fa-chalkboard"></i> Google Classroom</li></a>
-    </ul> 
+      <div class=left-col>
+         <img src="img/reich.png"
+            width="199px">
+      </div>
+   </ul> 
     <div class="social_media">
     <center>
       <img src="https://www.cutercounter.com/hits.php?id=hxafdfd&nd=4&style=10" border="0" alt="best free website hit counter">
@@ -77,6 +81,14 @@
       <div class="main">
          <!-- Portfolio Gallery Grid -->
          <div class="row">
+            <div name = "Superhot Prototype" class="column gameDiv all 2">
+               <a class="blogLink" href="games/superhot/">
+                  <div class="content">
+                     <img src="img/superhot-prototype.png" alt="Superhot Prototype" style="width:100%">
+                     <h4>Superhot Prototype</h4>
+                  </div>
+               </a>
+            </div>
             <div name = "Vex 3" class="column gameDiv all 2">
                <a class="blogLink" href="games/vex3/">
                   <div class="content">
@@ -245,6 +257,14 @@
                   </div>
                </a>
             </div>
+            <div name = "8 Ball Pool" class="column gameDiv all sport">
+               <a class="blogLink" href="games/8ball/">
+                  <div class="content">
+                     <img src="img/8ballPool.png" alt="8 Ball Pool" style="width:100%">
+                     <h4>8 Ball Pool</h4>
+                  </div>
+               </a>
+            </div>
             <div name = "Rolling Sky" class="column gameDiv all">
                <a class="blogLink" href="games/webgl-rollingsky/">
                   <div class="content">
@@ -258,14 +278,6 @@
                   <div class="content">
                      <img src="https://i.ibb.co/5Kq0BQY/madalin-stunt-cars-2.png" alt="Madalin Stunt Cars" style="width:100%">
                      <h4>Madalin Stunt Cars</h4>
-                  </div>
-               </a>
-            </div>
-            <div name = "8 Ball Pool" class="column gameDiv all sport">
-               <a class="blogLink" href="games/8ball/">
-                  <div class="content">
-                     <img src="https://i.ibb.co/zmY3zVh/8ball-Pool.png" alt="8 Ball Pool" style="width:100%">
-                     <h4>8 Ball Pool</h4>
                   </div>
                </a>
             </div>
@@ -328,7 +340,7 @@
             <div name = "Craftmine" class="column gameDiv all">
                <a class="blogLink" href="games/craftmine/">
                   <div class="content">
-                     <img src="https://i.ibb.co/PGdXZ4n/paper-Minecraft.png" alt="craftmine" style="width:100%">
+                     <img src="img/craftmine.png" alt="craftmine" style="width:100%">
                      <h4>Craftmine</h4>
                   </div>
                </a>
@@ -336,7 +348,7 @@
             <div name = "Minekhan" class="column gameDiv all">
                <a class="blogLink" href="games/minekhan/">
                   <div class="content">
-                     <img src="https://i.ibb.co/pwHS4WJ/potty-Racers.png" alt="Minekhan" style="width:100%">
+                     <img src="img/minekhan.png" alt="Minekhan" style="width:100%">
                      <h4>Minekhan</h4>
                   </div>
                </a>
