OMG IS THIS REEALLLY HAPPENING

--- a/no-password.html
+++ b/no-password.html
@@ -18,7 +18,7 @@
       <a href="#"><li><i class="fa-solid fa-ghost"></i> Request Game</li></a>
       <a href="https://classroom.google.com/h"><li><i class="fa-solid fa-chalkboard"></i> Google Classroom</li></a>
       <div class=left-col>
-         <img src="img/reich.png"
+         <img src="img/icon.png"
             width="199px">
       </div>
    </ul> 
