--- a/no-password.html
+++ b/no-password.html
@@ -81,7 +81,23 @@
       <div class="main">
          <!-- Portfolio Gallery Grid -->
          <div class="row">
-            <div name = "Superhot Prototype" class="column gameDiv all 2">
+            <div name = "Idle Breakout" class="column gameDiv all">
+               <a class="blogLink" href="games/idle-breakout/">
+                  <div class="content">
+                     <img src="img/idle-breakout.png" alt="Idle Breakout" style="width:100%">
+                     <h4>Idle Breakout</h4>
+                  </div>
+               </a>
+            </div>
+            <div name = "Tanuki Sunset" class="column gameDiv all">
+               <a class="blogLink" href="games/tanuki-sunset/">
+                  <div class="content">
+                     <img src="img/tanuki-sunset.png" alt="Tanuki Sunset" style="width:100%">
+                     <h4>Tanuki Sunset</h4>
+                  </div>
+               </a>
+            </div>
+            <div name = "Superhot Prototype" class="column gameDiv all">
                <a class="blogLink" href="games/superhot/">
                   <div class="content">
                      <img src="img/superhot-prototype.png" alt="Superhot Prototype" style="width:100%">
@@ -89,7 +105,7 @@
                   </div>
                </a>
             </div>
-            <div name = "Vex 3" class="column gameDiv all 2">
+            <div name = "Vex 3" class="column gameDiv all">
                <a class="blogLink" href="games/vex3/">
                   <div class="content">
                      <img src="img/vex3.png" alt="Vex 3" style="width:100%">
