--- a/404.html
+++ b/404.html
@@ -87,13 +87,13 @@
 <body>
     <section class="notFound">
         <div class="img">
-            <img style="width:700px;" src="img/404.png" alt="icon" />
+            <img style="width:700px;" src="https://dngaa.github.io/img/404.png" alt="icon" />
         </div>
         <div class="text">
             <h1>404</h1>
             <h2>PAGE NOT FOUND</h2>
             <h3>BACK TO HOME?</h3>
-            <a href="index.html" class="yes">YES</a>
+            <a href="https://dngaa.github.io/index.html" class="yes">YES</a>
             <a href="https://www.youtube.com/watch?v=G3AfIvJBcGo">NO</a>
         </div>
     </section>
