--- a/no-password.html
+++ b/no-password.html
@@ -92,6 +92,22 @@
                <div class="main">
                   <!-- Portfolio Gallery Grid -->
                   <div class="row">
+                     <div name="Paper.io 2" class="column gameDiv all">
+                        <a class="blogLink" href="games/paperio2/">
+                           <div class="content">
+                              <img src="img/paper-io-2.png" alt="Paper.io 2" style="width:100%">
+                              <h4>Paper.io 2</h4>
+                           </div>
+                        </a>
+                     </div>
+                     <div name="Duck Life 4" class="column gameDiv all">
+                        <a class="blogLink" href="games/ducklife4/">
+                           <div class="content">
+                              <img src="img/duck-life-4.png" alt="Duck Life 4" style="width:100%">
+                              <h4>Duck Life 4</h4>
+                           </div>
+                        </a>
+                     </div>
                      <div name="Idle Breakout" class="column gameDiv all">
                         <a class="blogLink" href="games/idle-breakout/">
                            <div class="content">
