--- a/404.html
+++ b/404.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Page Title</title>
+    <link rel="stylesheet" href="css/particles.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
@@ -85,6 +86,7 @@
 </head>
 
 <body>
+    <div id="particles-js"></div>
     <section class="notFound">
         <div class="img">
             <img style="width:600px;" src="https://dngaa.github.io/img/404.png" alt="icon" />
@@ -97,6 +99,7 @@
             <a href="https://www.youtube.com/watch?v=G3AfIvJBcGo">NO</a>
         </div>
     </section>
+    <script type="text/javascript" src="particles.js"></script>
+    <script type="text/javascript" src="app.js"></script>
 </body>
-
 </html>
