--- a/dont-share.html
+++ b/dont-share.html
@@ -4,8 +4,9 @@
 <head>
    <meta charset="UTF-8">
    <title>Jet Yeh's</title>
-   <link rel="stylesheet" href="style.css">
-   <link rel="stylesheet" type="text/css" href="blogDexStyle.css">
+   <link rel="stylesheet" href="css/particles.css">
+   <link rel="stylesheet" href="css/style.css">
+   <link rel="stylesheet" href="css/blogDexStyle.css">
    <script src="https://kit.fontawesome.com/f4c5c3ffd2.js"></script>
 </head>
 
