--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Page Title</title>
+    <title>404 | Jet Yeh's</title>
     <link rel="stylesheet" href="css/particles.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
