--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="noindex, nofollow">
     <link rel="stylesheet" href="css/particles.css">
-    <title>Password Protected Page</title>
+    <title>Discovery | Jet Yeh's</title>
     <style>
         html, body {
             margin: 0;
