--- a/movies/spidermanNoWayHome.html
+++ b/movies/spidermanNoWayHome.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Spider-Man No Way Home</title>
+<title>Spider-Man No Way Home | Jet Yeh's</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 <style>
 html {overflow: auto;}
