--- a/movies/shrek.html
+++ b/movies/shrek.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Shrek</title>
+<title>Shrek | Jet Yeh's</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 <style>
 html {overflow: auto;}
