--- a/movies/the-great-gatsby.html
+++ b/movies/the-great-gatsby.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Megamind | Jet Yeh's</title>
+<title>The Great Gatsby | Jet Yeh's</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 <style>
 html {overflow: auto;}
@@ -10,7 +10,7 @@ iframe {display: block; width: 100%; border: none; overflow-y: auto; overflow-x:
 </style>
 </head>
 <body class="color">
-<iframe src="https://drive.google.com/file/d/1B04UaUyL4uif5hbPrGjDMT_97TgtHDk0/preview" style="border:0px #ffffff none;" name="myiFrame" frameborder="0" marginheight="0" marginwidth="0" width="100%" height="100%" scrolling="auto"></iframe>
+<iframe src="#" style="border:0px #ffffff none;" name="myiFrame" frameborder="0" marginheight="0" marginwidth="0" width="100%" height="100%" scrolling="auto"></iframe>
 <br>
 <center>
         <button onclick="window.open ('/index.html', '_self');" class="button button1">back</button>
