--- a/dont-share.html
+++ b/dont-share.html
@@ -93,6 +93,14 @@
                <div class="main">
                   <!-- Portfolio Gallery Grid -->
                   <div class="row">
+                     <div name="Sans Fight" class="column gameDiv all">
+                        <a class="blogLink" href="games/sans-fight/">
+                           <div class="content">
+                              <img src="img/sans-fight.png" alt="Sans Fight" style="width:100%">
+                              <h4>Sans Fight</h4>
+                           </div>
+                        </a>
+                     </div>
                      <div name="Flappy Bird" class="column gameDiv all">
                         <a class="blogLink" href="games/flappy-bird/">
                            <div class="content">
