--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="noindex, nofollow">
     <link rel="stylesheet" href="css/particles.css">
-    <title>Discovery | Jet Yeh's</title>
+    <title> </title>
     <style>
         html, body {
             margin: 0;
@@ -117,7 +117,6 @@
     <div id="dialogWrap">
         <div id="particles-js"></div>
         <div id="dialogWrapCell">
-            <img src="img/404.png" width="199px">
             <div id="mainDialog">
                 <div id="dialogText">This page is password protected.</div>
                 <div id="passArea">
