--- a/dont-share.html
+++ b/dont-share.html
@@ -94,7 +94,7 @@
                   <!-- Portfolio Gallery Grid -->
                   <div class="row">
                      <div name="Bloons Tower Defense" class="column gameDiv all">
-                        <a class="blogLink" href="gfiles/gfiles/flash/?swf=bloonstd1.swf">
+                        <a class="blogLink" href="/games/flash/?swf=bloonstd1.swf">
                            <div class="content">
                               <img src="img/bloons-tower-defense.png" alt="Bloons Tower Defense" style="width:100%">
                               <h4>Bloons Tower Defense</h4>
