weekly update time

--- a/dont-share.html
+++ b/dont-share.html
@@ -93,6 +93,14 @@
                <div class="main">
                   <!-- Portfolio Gallery Grid -->
                   <div class="row">
+                     <div name="Bloxorz" class="column gameDiv all">
+                        <a class="blogLink" href="/games/flash/?swf=bloxorz.swf">
+                           <div class="content">
+                              <img src="https://i.ibb.co/dQ42rx0/Bloxorz.png" alt="Bloxorz" style="width:100%">
+                              <h4>Bloxorz</h4>
+                           </div>
+                        </a>
+                     </div>
                      <div name="Bloons Tower Defense" class="column gameDiv all">
                         <a class="blogLink" href="/games/flash/?swf=bloonstd1.swf">
                            <div class="content">
@@ -431,14 +439,6 @@
                            <div class="content">
                               <img src="https://i.ibb.co/gMQyPGL/catMario.png" alt="Cat Mario" style="width:100%">
                               <h4>NOT WORKING</h4>
-                           </div>
-                        </a>
-                     </div>
-                     <div name="Bloxorz" class="column gameDiv all">
-                        <a class="blogLink" href="games/flash-games/bloxorz.html">
-                           <div class="content">
-                              <img src="https://i.ibb.co/dQ42rx0/Bloxorz.png" alt="Bloxorz" style="width:100%">
-                              <h4>Bloxorz</h4>
                            </div>
                         </a>
                      </div>
