--- a/dont-share.html
+++ b/dont-share.html
@@ -101,11 +101,19 @@
                            </div>
                         </a>
                      </div>
-                     <div name="Bloons Tower Defense" class="column gameDiv all">
+                     <div name="Bloons Tower Defense 1" class="column gameDiv all">
                         <a class="blogLink" href="/games/flash/?swf=bloonstd1.swf">
                            <div class="content">
                               <img src="img/bloons-tower-defense.png" alt="Bloons Tower Defense" style="width:100%">
                               <h4>Bloons Tower Defense</h4>
+                           </div>
+                        </a>
+                     </div>
+                     <div name="Bloons Tower Defense 2" class="column gameDiv all">
+                        <a class="blogLink" href="/games/flash/?swf=bloonstd2.swf">
+                           <div class="content">
+                              <img src="img/bloons-tower-defense-2.png" alt="Bloons Tower Defense 2" style="width:100%">
+                              <h4>Bloons Tower Defense 2</h4>
                            </div>
                         </a>
                      </div>
@@ -205,8 +213,32 @@
                            </div>
                         </a>
                      </div>
+                     <div name="Duck Life 1" class="column gameDiv all">
+                        <a class="blogLink" href="/games/flash/?swf=ducklife.swf">
+                           <div class="content">
+                              <img src="img/duck-life.png" alt="Duck Life 1" style="width:100%">
+                              <h4>Duck Life</h4>
+                           </div>
+                        </a>
+                     </div>
+                     <div name="Duck Life 2" class="column gameDiv all">
+                        <a class="blogLink" href="/games/flash/?swf=ducklife2.swf">
+                           <div class="content">
+                              <img src="img/duck-life-2.png" alt="Duck Life 2" style="width:100%">
+                              <h4>Duck Life 2</h4>
+                           </div>
+                        </a>
+                     </div>
+                     <div name="Duck Life 3" class="column gameDiv all">
+                        <a class="blogLink" href="/games/flash/?swf=ducklife3.swf">
+                           <div class="content">
+                              <img src="img/duck-life-3.png" alt="Duck Life 3" style="width:100%">
+                              <h4>Duck Life 3</h4>
+                           </div>
+                        </a>
+                     </div>
                      <div name="Duck Life 4" class="column gameDiv all">
-                        <a class="blogLink" href="games/ducklife4/">
+                        <a class="blogLink" href="/games/flash/?swf=ducklife4.swf">
                            <div class="content">
                               <img src="img/duck-life-4.png" alt="Duck Life 4" style="width:100%">
                               <h4>Duck Life 4</h4>
@@ -517,11 +549,11 @@
                            </div>
                         </a>
                      </div>
-                     <div name="MsPacman" class="column gameDiv all">
+                     <div name="Ms Pacman" class="column gameDiv all">
                         <a class="blogLink" href="games/pacman/">
                            <div class="content">
-                              <img src="img/ms-pac-man.png" alt="Ms.Pac-Man" style="width:100%">
-                              <h4>Ms.Pac-Man</h4>
+                              <img src="img/ms-pac-man.png" alt="Ms. Pac-Man" style="width:100%">
+                              <h4>Ms. Pac-Man</h4>
                            </div>
                         </a>
                      </div>
