--- a/dont-share.html
+++ b/dont-share.html
@@ -93,6 +93,38 @@
                <div class="main">
                   <!-- Portfolio Gallery Grid -->
                   <div class="row">
+                     <div name="Hobo 1" class="column gameDiv all">
+                        <a class="blogLink" href="/games/flash/?swf=hobo.swf">
+                           <div class="content">
+                              <img src="img/hobo.png" alt="Hobo" style="width:100%">
+                              <h4>Hobo</h4>
+                           </div>
+                        </a>
+                     </div>
+                     <div name="Hobo 2: Prison Brawl" class="column gameDiv all">
+                        <a class="blogLink" href="/games/flash/?swf=hobo2.swf">
+                           <div class="content">
+                              <img src="img/hobo2.png" alt="Hobo 2: Prison Brawl" style="width:100%">
+                              <h4>Hobo 2: Prison Brawl</h4>
+                           </div>
+                        </a>
+                     </div>
+                     <div name="Hobo 3: Wanted" class="column gameDiv all">
+                        <a class="blogLink" href="/games/flash/?swf=hobo3.swf">
+                           <div class="content">
+                              <img src="img/hobo3.png" alt="Hobo 3: Wanted" style="width:100%">
+                              <h4>Hobo 3: Wanted</h4>
+                           </div>
+                        </a>
+                     </div>
+                     <div name="Hobo 4: Total War" class="column gameDiv all">
+                        <a class="blogLink" href="/games/flash/?swf=hobo4.swf">
+                           <div class="content">
+                              <img src="img/hobo4.png" alt="Hobo 4: Total War" style="width:100%">
+                              <h4>Hobo 4: Total War</h4>
+                           </div>
+                        </a>
+                     </div>
                      <div name="Bloxorz" class="column gameDiv all">
                         <a class="blogLink" href="/games/flash/?swf=bloxorz.swf">
                            <div class="content">
@@ -408,7 +440,7 @@
                         </a>
                      </div>
                      <div name="Tetris" class="column gameDiv all nin">
-                        <a class="blogLink" href="games/flash-games/tetris.html">
+                        <a class="blogLink" href="/games/flash/?swf=tetris.swf">
                            <div class="content">
                               <img src="https://i.ibb.co/SwwYxvP/tetris.png" alt="Tetris" style="width:100%">
                               <h4>Tetris</h4>
@@ -542,7 +574,7 @@
                         </a>
                      </div>
                      <div name="GunBlood" class="column gameDiv all">
-                        <a class="blogLink" href="games/flash-games/gunblood.html">
+                        <a class="blogLink" href="/games/flash/?swf=gunblood.swf">
                            <div class="content">
                               <img src="https://i.ibb.co/WHVfFhb/gunBlood.png" alt="Gun Blood" style="width:100%">
                               <h4>GunBlood</h4>
